Tue May 27 17:37:21 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/IFRService/ComponentDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/tmplinst.cpp: Fixed a explicit
	  template instantiation problem in our daily builds. The problem
	  was that some of the instantiated templates also had a
	  specialization which the compiler couldn't see. The fix
	  essentially moved the explicit template instantiations after the
	  specialization so that the compiler doesn't get confused when
	  using explicit template instantiations. 

Tue May 27 15:17:31 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_ci.cpp:

          Removed initialization of collocation proxy broker pointer
          from the constructor of an abstract interface, since
          abstract interfaces do not contain such a member.

Tue May 27 14:43:09 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/DynamicAny/DynCommon.cpp:

          Added initialization for a CORBA::ULongLong return value in
          get_ulonglong(). Thanks to Terry Lacy <terry.lacy@thomson.net>
          for reporting the oversight.

Mon May 26 17:04:02 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tao/ORB.cpp (register_value_factory): Changed to make sure we
	  don't return the newly registered value factory as the
	  previously registered value factory if none exist.  Otherwise,
	  we would simply register the valuefactory and then destroy it
	  immediately.

Mon May 26 17:29:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/UIOP_Lite_Factory.h:
          Fixed incorrect ACE_FACTORY_DECLARE usage. This fixed the internal
          compiler error in the Cygwin build.

Mon May 26 12:18:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/POA.cpp:
          Fixed uninitialized parameter warning. Thanks to
          W.M. van den Boogaard <wim.vd.boogaard@meco.nl> for reporting
          this.
