@@ -1,3 +1,8 @@
+Wed May 28 08:28:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/Event/EC_Default_Factory.cpp:
+          Fixed warning in SunOS build
+
 Tue May 27 17:37:21 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* orbsvcs/orbsvcs/IFRService/ComponentDef_i.cpp:
@@ -7,7 +12,7 @@ Tue May 27 17:37:21 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 	  specialization which the compiler couldn't see. The fix
 	  essentially moved the explicit template instantiations after the
 	  specialization so that the compiler doesn't get confused when
-	  using explicit template instantiations. 
+	  using explicit template instantiations.
 
 Tue May 27 15:17:31 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
